SelenoidRemoteDriverDesktop uses URL